# annium-lang

./: .gitignore  .gitmodules  CMakeLists.txt  Directory.Build.props  README.md  annium.sln  annium.slnx  vcpkg-lock.json  vcpkg.json
.github/workflows/: msvc-tests.yml
projects/cmake/annium/: CMakeLists.txt  generate_bootstrap.cmake
projects/cmake/annium_tests/: CMakeLists.txt
projects/cmake/tests/: CMakeLists.txt
projects/vs/: .gitignore  annium.sln
projects/vs/annium/: annium.vcxproj  annium.vcxproj.filters
projects/vs/tests/: annium_tests.vcxproj  annium_tests.vcxproj.filters  log.conf  tests.vcxproj  tests.vcxproj.filters
src/: build_config.hpp
src/annium/: .gitignore  annium.cpp  annium.hpp  annium.l  annium.tab.cpp  annium.tab.hpp  annium.y  annium.yy.cpp  annium.yy.hpp  annium_auxiliary.cpp  annium_environment.cpp  annium_errors.cpp  annium_parser.cpp  annium_semantic.cpp  ast_terms.hpp  auxiliary.hpp  bootstrap.ann  environment.hpp  errors.hpp  generate_bootstrap.ps1  generate_parser.cmd  location.hh  parser.hpp  semantic.hpp  semantic_fwd.hpp  terms.hpp
src/annium/ast/: arena.hpp  assign_expression_visitor.cpp  assign_expression_visitor.hpp  ast_resource.cpp  ast_resource.hpp  base_expression_visitor.cpp  base_expression_visitor.hpp  base_expression_visitor.ipp  ct_expression_visitor.cpp  ct_expression_visitor.hpp  declaration_visitor.cpp  declaration_visitor.hpp  expression_decimal_visitor.hpp  expression_fn_visitor.hpp  expression_implicit_cast_visitor.hpp  expression_type_visitor.hpp  expression_vector_visitor.hpp  expression_visitor.cpp  expression_visitor.hpp  fn_compiler_context.cpp  fn_compiler_context.hpp  functional_declaration_visitor.cpp  functional_declaration_visitor.hpp  vector_expression_visitor.hpp
src/annium/ast/casts/: expression_cast_to_bool_visitor.hpp  expression_cast_to_enum_visitor.hpp  expression_cast_to_float_visitor.hpp  expression_cast_to_int_visitor.hpp  expression_cast_to_object_visitor.hpp  expression_cast_to_string_visitor.hpp  expression_cast_to_vector_visitor.cpp  expression_cast_to_vector_visitor.hpp  expression_cast_utility.cpp  utility.hpp
src/annium/entities/: functional.cpp  functional.hpp  functional_binding.cpp  functional_binding.hpp  functional_entity.cpp  functional_entity.hpp  functional_registry.hpp  internal_type_entity.hpp  layered_binding_set.cpp  layered_binding_set.hpp  prepared_call.cpp  prepared_call.hpp  signatured_entity.hpp  type_entity.cpp  type_entity.hpp  variable_entity.cpp  variable_entity.hpp
src/annium/entities/array/: array_elements_implicit_cast_pattern.cpp  array_elements_implicit_cast_pattern.hpp  array_from_iterator_make_pattern.cpp  array_from_iterator_make_pattern.hpp  array_get_pattern.cpp  array_get_pattern.hpp  array_head_pattern.cpp  array_head_pattern.hpp  array_implicit_cast_pattern.cpp  array_implicit_cast_pattern.hpp  array_make_pattern.cpp  array_make_pattern.hpp  array_tail_pattern.cpp  array_tail_pattern.hpp
src/annium/entities/callables/: to_callable_implicit_cast_pattern.cpp  to_callable_implicit_cast_pattern.hpp  to_external_callable_implicit_cast_pattern.cpp  to_external_callable_implicit_cast_pattern.hpp
src/annium/entities/ellipsis/: ellipsis_pattern.cpp  ellipsis_pattern.hpp
src/annium/entities/enum/: enum_entity.cpp  enum_entity.hpp  enum_equal_pattern.cpp  enum_equal_pattern.hpp  enum_get_pattern.cpp  enum_get_pattern.hpp  enum_implicit_cast_pattern.cpp  enum_implicit_cast_pattern.hpp  enum_implicit_runtime_cast_pattern.cpp  enum_implicit_runtime_cast_pattern.hpp  enum_to_integer_pattern.cpp  enum_to_integer_pattern.hpp  enum_to_string_pattern.cpp  enum_to_string_pattern.hpp
src/annium/entities/fixed_array/: fixed_array_elements_implicit_cast_pattern.cpp  fixed_array_elements_implicit_cast_pattern.hpp  fixed_array_get_pattern.cpp  fixed_array_get_pattern.hpp  fixed_array_head_pattern.cpp  fixed_array_head_pattern.hpp  fixed_array_implicit_cast_pattern.cpp  (+5 more)
src/annium/errors/: assign_error.cpp  assign_error.hpp  cast_error.cpp  cast_error.hpp  circular_dependency_error.cpp  circular_dependency_error.hpp  function_call_match_error.cpp  function_call_match_error.hpp  identifier_redefinition_error.cpp  identifier_redefinition_error.hpp  no_position_argument_error.cpp  no_position_argument_error.hpp  pattern_match_error.cpp  pattern_match_error.hpp  signature_name_mismatch_error.cpp  signature_name_mismatch_error.hpp  type_mismatch_error.cpp  type_mismatch_error.hpp  utility.hpp  value_mismatch_error.cpp  value_mismatch_error.hpp
src/annium/functional/: basic_fn_pattern.cpp  basic_fn_pattern.hpp  expression_property_visitor.cpp  expression_property_visitor.hpp  external_fn_pattern.cpp  external_fn_pattern.hpp  functional.cpp  functional.hpp  generic_pattern_base.hpp  generic_pattern_base.ipp  internal_fn_pattern.cpp  internal_fn_pattern.hpp  match_penalty.cpp  match_penalty.hpp  match_utility.ipp  parameter_matcher.cpp  parameter_matcher.hpp  pattern_matcher.cpp  pattern_matcher.hpp  signature_matcher.cpp  signature_matcher.hpp  typefn_pattern.cpp  typefn_pattern.hpp  value_match_visitor.cpp  value_match_visitor.hpp  value_type_match_visitor.cpp  value_type_match_visitor.hpp
src/annium/semantic/: expression_printer.hpp  semantic_expression_printer.cpp
src/annium/utility/: linked_list.hpp  linked_list.ipp
src/annium/vm/: annium_vm.cpp  annium_vm.hpp  asm_builder.hpp  compiler_visitor.hpp  push_value_visitor.hpp  vmasm_builder.hpp
src/sonia/mvvm/: annium_view_model.cpp  annium_view_model.hpp  builder_view_model.cpp  builder_view_model.hpp  bunch_builder_view_model.cpp  bunch_builder_view_model.hpp
tests/: annium_test.cpp
tests/test-suite/: .gitignore  annium_suite.json  array_operations.ann  arrays.ann  basic_print.ann  basic_tuple.ann  boolean_logic.ann  callables.ann  casts.ann  conditional_statements.ann  draft.ann  enums.ann  file3.ann  function_calls.ann  functors.ann  includee.ann  includer.ann  match_priority.ann  std.ann  tuple_operations.ann  tuples_test2.ann  unions.ann  unions_test.ann  whiles.ann
triplets/: x64-windows-cpp23.cmake
(+135 files in other folders)
